--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: 'none'
 version: 1.0.4+5
 
 environment:
-  sdk: '>=2.18.2 <3.0.0'
+  sdk: '>=3.2.0 <4.0.0'
 
 dependencies:
   flutter:
@@ -22,7 +22,7 @@ dependencies:
   path_provider: ^2.0.11
   provider: any
   image_cropper: ^3.0.1
-  share_plus: ^6.3.0
+  share_plus: ^4.5.3
   shared_preferences: any
   encrypt: ^5.0.1
   fluttertoast: ^8.2.1
@@ -30,6 +30,7 @@ dependencies:
   local_auth_android: any
   flutter_secure_storage: ^8.0.0
   permission_handler: ^10.2.0
+  device_info_plus: ^10.1.0
   record_mp3: ^3.0.0
   lottie: ^2.3.2
   audio_waveforms: ^1.0.4
